--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="#FFF"
+        android:padding="16dp"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        tools:text="0"
         android:background="@android:color/holo_red_dark"
         app:layout_constraintEnd_toStartOf="@+id/textViewCounter2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -51,6 +55,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="#FFF"
+        tools:text="0"
+        android:textAlignment="center"
+        android:padding="16dp"
+        android:textSize="24sp"
         android:background="@android:color/holo_blue_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
